--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta name="author" content="cosmos-themes" />
 
         <!--Page Title-->
-        <title>Watson - vCard / Resume/ CV Template</title>
+        <title>Deiby Torrez - CV</title>
 
         <!--Plugins Css-->
         <link rel="stylesheet" href="css/plugins.css">
@@ -102,7 +102,7 @@
                     <div class="header-main" data-simplebar>
                         <div class="image-container">
                             <h2 class="header-name">Deiby Torrez</h2>
-                            <img src="img/profile-img.jpg" alt="profile-pic">
+                            <img src="img/perfil.jpg" alt="profile-pic">
                         </div>
 
                         <!--Nav Menus-->
@@ -110,10 +110,10 @@
                             <ul>
                                 <li><a href="#home" class="pt-link active"><span class="nav-menu-icon"><i class="lnr lnr-home"></i></span>Inicio </a> </li>
                                 <li><a href="#about" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-user"></i></span>Acerca de Mi</a></li>
-                                <li><a href="#resume" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-license"></i></span>Resume</a></li>
+                                <li><a href="#resume" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-license"></i></span>Curriculum</a></li>
                                 <li><a href="#portfolio" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-briefcase"></i></span>Portfolio</a></li>
                                 <li><a href="#blog" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-book"></i></span>Blog</a></li>
-                                <li><a href="#contact" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-envelope"></i></span>Contact</a></li>
+                                <li><a href="#contact" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-envelope"></i></span>Contactamé</a></li>
                             </ul>
                         </nav>
 
@@ -188,7 +188,7 @@
 
                                 <!--Signature Image-->
                                 <div class="signature mt-20">
-                                    <img src="img/signature-white.png" alt="">
+                                    <img src="img/pez.png" alt="">
                                 </div>
                             </div>
 
@@ -206,7 +206,7 @@
                                         <li><span class="title">Freelance</span><span class="value">Disponible</span></li>
                                     </ul>
                                     <div class="resume-button mt-30">
-                                        <a class="btn-main" href="#">Download Resume</a>
+                                        <a class="btn-main" href="#">Descargar CV</a>
                                     </div>
                                 </div>
                             </div>
@@ -263,7 +263,7 @@
                         <div class="row clients mb-70">
                             <div class="col-md-12">
                                 <div class="subheading">
-                                    <h3>Clients</h3>
+                                    <h3>Clientes</h3>
                                 </div>
                             </div>
 
@@ -340,7 +340,7 @@
                         <div class="row testimonials mb-50">
                             <div class="col-md-12">
                                 <div class="subheading">
-                                    <h3>Testimonials</h3>
+                                    <h3>Hobbies</h3>
                                 </div>
                                 <div class="owl-carousel owl-theme">
 
@@ -401,7 +401,7 @@
                     <div class="section-container">
                         <div class="page-heading">
                             <span class="icon"><i class="lnr lnr-license"></i></span>
-                            <h2>My Resume.</h2>
+                            <h2>Mi Hoja de Vida.</h2>
                         </div>
 
                         <!--Education & Experience Row Start-->
@@ -536,7 +536,7 @@
                             <!--Design Skills Column Start-->
                             <div class="col-lg-6 skills">
                                 <div class="subheading">
-                                    <h3>Design Skills</h3>
+                                    <h3>Habilidades en Diseño</h3>
                                 </div>
 
                                 <!--Design Skill Item-->
@@ -574,7 +574,7 @@
                             <!--Coding Skills Column Start-->
                             <div class="col-lg-6 skills">
                                 <div class="subheading">
-                                    <h3>Coding Skills</h3>
+                                    <h3>Habilidades Codificando</h3>
                                 </div>
 
                                 <!--Coding Skill Item-->
@@ -798,7 +798,7 @@
                         <!--Page Heading-->
                         <div class="page-heading">
                             <span class="icon"><i class="lnr lnr-book"></i></span>
-                            <h2>My Blogs.</h2>
+                            <h2>Mi Blogs.</h2>
                         </div>
 
                         <div class="row blogs-masonry">
@@ -934,14 +934,14 @@
                         <!--Page Heading-->
                         <div class="page-heading">
                             <span class="icon"><i class="lnr lnr-envelope"></i></span>
-                            <h2>Contact Me.</h2>
+                            <h2>Contáctame.</h2>
                         </div>
 
                         <!--Form Row-->
                         <div class="row mb-70">
                             <div class="col-lg-8  offset-lg-2">
                                 <div class="subheading">
-                                    <h3>Let's Talk</h3>
+                                    <h3>Escríbeme</h3>
                                 </div>
 
                                 <!--Form Start-->
@@ -953,7 +953,7 @@
                                         <div class="col-md-6 mb-50">
                                             <span class="input">
                                                 <input class="input__field cf-validate" type="text" id="cf-name" name="name" />
-                                                <label class="input__label" for="cf-name">Name</label>
+                                                <label class="input__label" for="cf-name">Nombre</label>
                                             </span>
                                         </div>
 
@@ -969,7 +969,7 @@
                                         <div class="col-md-12 mb-30">
                                             <span class="input">
                                                 <textarea  class="input__field cf-validate" id="cf-message" name="message" rows="5" ></textarea>
-                                                <label class="input__label" for="cf-message">How can we help you?</label>
+                                                <label class="input__label" for="cf-message">Cómo puedo ayudarte?</label>
                                             </span>
                                         </div>
 
@@ -977,7 +977,7 @@
 
                                         <!--Submit Button-->
                                         <div class="col-md-12 text-center">
-                                            <button id="cf-submit" class="btn-main">Send Message</button>
+                                            <button id="cf-submit" class="btn-main">Enviar Mensaje</button>
                                         </div>
 
 
@@ -994,19 +994,19 @@
                             <!--Contact Info Item-->
                             <div class="col-md-4 info-item">
                                 <span class="icon"><i class="fas fa-paper-plane"></i></span>
-                                <h5><a href="mailto:example@example.com">example@example.com</a></h5>
+                                <h5><a href="mailto:deibytorrez@gmail.com">deibytorrez@gmail.com</a></h5>
                             </div>
 
                             <!--Contact Info Item-->
                             <div class="col-md-4 info-item">
                                 <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
-                                <h5>123 Lorem Ipsum, USA</h5>
+                                <h5>km8 Doble via a la Guardia, Santa Cruz-BOLIVIA</h5>
                             </div>
 
                             <!--Contact Info Item-->
                             <div class="col-md-4 info-item">
                                 <span class="icon"><i class="fas fa-phone"></i></span>
-                                <h5>(+1) 123 456 7890</h5>
+                                <h5>(+591) 798 65633</h5>
                             </div>
 
                         </div>
@@ -1059,6 +1059,5 @@
 
     </body>
 
-<!-- Mirrored from watson-vcard.netlify.app/index-dark-particles2.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 May 2022 17:31:26 GMT -->
 </html>
 
