--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" data-random-animation="false" data-animation="19">
-    
-<!-- Mirrored from watson-vcard.netlify.app/index-dark-particles2.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 May 2022 17:30:40 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<html lang="es" data-random-animation="false" data-animation="19">
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 
         <!--Meta Tags-->
@@ -75,6 +73,7 @@
             <div class="loader">
                 <!--Your Name-->
                 <h4>Deiby Torrez</h4>
+                <h6>Ingeniero en Sistemas</h6>
                 <span></span>
                 <span></span>
                 <span></span>
@@ -145,7 +144,7 @@
                 <!--Banner Section Start-->
                 <section id="home" class="banner-section pt-page" style="background-image: url('img/background/home-bg.jpg')">
 
-                    <div id="particles-js"></div>
+                    <div id="particles-js"><canvas class="particles-js-canvas-el" width="1160" height="363" style="width: 100%; height: 100%;"></canvas></div>
 
                     <div class="banner-content">
                         <!--Banner Text-->
@@ -153,12 +152,14 @@
 
                         <!--Animated Text-->
                         <p class="cd-headline clip is-full-width">
-                        <span>I am a </span>
+                        <span>Yo soy </span>
                         <span class="cd-words-wrapper">
-                            <b class="is-visible">Graphics Designer</b>
-                            <b>Freelancer</b>
-                            <b>Web Developer</b>
-                            <b>UI/UX Designer</b>
+                            <b class="is-visible">Desarrollador Web</b>
+                            <b>Diseñador Gráfico</b>
+                            <b>Instalador de Redes y Servidores</b>
+                            <b>UI/UX Diseñador</b>
+                            <b>Técnico en Computadoras</b>
+                            <b>Técnico en Celulares</b>
                         </span>
                         </p>
 
@@ -198,7 +199,7 @@
                                     <h3 class="mb-20">Información Personal</h3>
                                     <ul>
                                         <li><span class="title">Nombre</span><span class="value">Deiby Torrez</span></li>
-                                        <li><span class="title">Edad</span><span class="value">26 Años</span></li>
+                                        <li><span class="title">Edad</span><span class="value">+30 Años</span></li>
                                         <li><span class="title">Dirección</span><span class="value">Santa Cruz, BOLIVIA</span></li>
                                         <li><span class="title">Address</span><span class="value">123 Lorem Ipsum</span></li>
                                         <li><span class="title">Email</span><span class="value">deibytorrez@gmail.com</span></li>
@@ -225,8 +226,8 @@
                             <div class="col-lg-3 col-sm-6">
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-laptop"></i></div>
-                                    <h4>Web Development</h4>
-                                    <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
+                                    <h4>Desarrollador Web</h4>
+                                    <p>Desarrollo de páginas web y sistemas a medida en las siguientes tecnologías php, laravel, python, django, SpringBoot, Jhipster.</p>
                                 </div>
                             </div>
 
@@ -234,8 +235,8 @@
                             <div class="col-lg-3 col-sm-6">
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-eye"></i></div>
-                                    <h4>Web Design</h4>
-                                    <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
+                                    <h4>Diseñador Web</h4>
+                                    <p>Diseños interactivos con Adobe XD, Axure RP, Figma y  los prototipos estáticos con Mockups Balsamic.</p>
                                 </div>
                             </div>
 
@@ -243,8 +244,8 @@
                             <div class="col-lg-3 col-sm-6">
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-laptop-phone"></i></div>
-                                    <h4>Responsive Design</h4>
-                                    <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
+                                    <h4>Diseñador Responsivo</h4>
+                                    <p>Desarrollamos aplicaciones web tanto para equipos de escritorio como para dispositivos móviles en uno solo.</p>
                                 </div>
                             </div>
 
@@ -252,10 +253,36 @@
                             <div class="col-lg-3 col-sm-6">
                                 <div class="service-item">
                                     <div class="icon"><i class="lnr lnr-camera"></i></div>
-                                    <h4>Photography</h4>
-                                    <p>Amet aspernatur delectus maxime ducimus similique Ratione asperiores corporis provident aut libero.</p>
+                                    <h4>Fotógrafo</h4>
+                                    <p>Tomamos, modificamos su producto con los mejores ángulos para su lanzamiento en páginas web o aplicaciones usando Photoshop, Illustrator e Indesign.</p>
                                 </div>
                             </div>
+
+                            <!--Service Item-->
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="service-item">
+                                    <div class="icon"><i class="lnr lnr-smartphone"></i></div>
+                                    <h4>Técnico en Celulares</h4>
+                                    <p>Mantenimiento y reparación de celulares y tablets.Cambio de entrada de carga, baterías, pantallas,etc. en general.</p>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="service-item">
+                                    <div class="icon"><i class="lnr lnr-laptop"></i></div>
+                                    <h4>Técnico en Computadoras</h4>
+                                    <p>Realizamos mantenimiento y repración de computadoras, portátiles e impresoras.A domicilio.</p>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3 col-sm-6">
+                                <div class="service-item">
+                                    <div class="icon"><i class="lnr lnr-graduation-hat"></i></div>
+                                    <h4>Plataformas Virtuales</h4>
+                                    <p>Manejo y capacitación en plataformas académicas como Moodle, Edmodo, Google Classroon, Schoology y reuniones virtuales para Zoom, Meet.</p>
+                                </div>
+                            </div>
+
                         </div>
                         <!--Services Row End-->
 
@@ -941,11 +968,11 @@
                         <div class="row mb-70">
                             <div class="col-lg-8  offset-lg-2">
                                 <div class="subheading">
-                                    <h3>Escríbeme</h3>
+                                    <h3>Contacto</h3>
                                 </div>
 
                                 <!--Form Start-->
-                                <form id="contact-form" method="post" action="https://watson-vcard.netlify.app/mail.php">
+                                <form name="contacto" netifly>
                                     <div class="row">
 
 
@@ -977,7 +1004,7 @@
 
                                         <!--Submit Button-->
                                         <div class="col-md-12 text-center">
-                                            <button id="cf-submit" class="btn-main">Enviar Mensaje</button>
+                                            <button id="cf-submit" class="btn-main" type="submit">Enviar Mensaje</button>
                                         </div>
 
 
