--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
                                 <!--Signature Image-->
                                 <div class="signature mt-20">
-                                    <img src="img/pez.png" alt="">
+                                    <img src="https://qrcode.tec-it.com/API/QRCode?data=https%3a%2f%2fwww.deibytorrez.xyz%2f&backcolor=%23ffffff" alt="Qr de mi página web">
                                 </div>
                             </div>
 
@@ -207,7 +207,7 @@
                                         <li><span class="title">Freelance</span><span class="value">Disponible</span></li>
                                     </ul>
                                     <div class="resume-button mt-30">
-                                        <a class="btn-main" href="#">Descargar CV</a>
+                                        <a class="btn-main" href="./pdf/CV-DeibyTorrez.pdf" target="_blank" rel="noopener noreferrer">Ver mi CV</a>
                                     </div>
                                 </div>
                             </div>
