--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 
                             <div class="col-lg-8">
                                 <!--Personal Intro-->
-                                <h3 class="mb-20">UI/UX Designer & Developer</h3>
-                                <p>Dolor reprehenderit aut repudiandae maiores recusandae. Consequatur dolor nisi labore commodi ipsa? Excepturi velit laboriosam at voluptatibus cupiditate est vel. Dolorem praesentium itaque fugiat placeat quas consequatur? Obcaecati natus rerum</p>
-                                <p>Consectetur consectetur nesciunt nesciunt blanditiis amet? Quod quis unde aliquid excepturi laudantium? Illo architecto aliquam velit illo magnam neque perferendis sint Incidunt eius ipsa inventore labore eos velit. Minus hic magni reiciendis necessitatibus ex Quidem officia deleniti accusamus obcaecati dolores. Porro culpa quibusdam impedit porro praesentium excepturi. Alias ab consequatur?</p>
+                                <h3 class="mb-20">UI/UX Technical & Developer</h3>
+                                <p>Soy una persona muy apasionado por la tecnología que siempre para en constante actualización y mejorano mi técnica a la hora de encontrarme con los desafíos cotidianos.</p>
+                                <p>Mi frase es tiene circuitos tiene solución a la hora de aplicar técnicas de reparación de hardware. Por otro lado es muy interesante digitalizar la información de cualquier ámbito hoy en día, me fascina hacerlo diseñando y desarrollandolo.</p>
 
                                 <!--Signature Image-->
                                 <div class="signature mt-20">
@@ -201,13 +201,12 @@
                                         <li><span class="title">Nombre</span><span class="value">Deiby Torrez</span></li>
                                         <li><span class="title">Edad</span><span class="value">+30 Años</span></li>
                                         <li><span class="title">Dirección</span><span class="value">Santa Cruz, BOLIVIA</span></li>
-                                        <li><span class="title">Address</span><span class="value">123 Lorem Ipsum</span></li>
                                         <li><span class="title">Email</span><span class="value">deibytorrez@gmail.com</span></li>
                                         <li><span class="title">Teléfono</span><span class="value">(+591) 798 65633</span></li>
                                         <li><span class="title">Freelance</span><span class="value">Disponible</span></li>
                                     </ul>
                                     <div class="resume-button mt-30">
-                                        <a class="btn-main" href="./pdf/CV-DeibyTorrez.pdf" target="_blank" rel="noopener noreferrer">Ver mi CV</a>
+                                        <a class="btn-main" href="./pdf/CV-DeibyTorrez.pdf" target="_blank" rel="noopener noreferrer">Mira mi CV</a>
                                     </div>
                                 </div>
                             </div>
