--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                         <li><span class="title">Freelance</span><span class="value">Disponible</span></li>
                                     </ul>
                                     <div class="resume-button mt-30">
-                                        <a class="btn-main" href="./pdf/CV-DeibyTorrez.pdf" target="_blank" rel="noopener noreferrer">Mira mi CV</a>
+                                        <a class="btn-main" href="https://drive.google.com/file/d/1W8AFHZredLMDRJroTZdlMV2RN6hMdTHB/view?usp=sharing" target="_blank" rel="noopener noreferrer">Mira mi CV</a>
                                     </div>
                                 </div>
                             </div>
@@ -363,12 +363,12 @@
                         <!--Clients Row End-->
 
                         <!--Testimonials Row Start-->
-                        <div class="row testimonials mb-50">
-                            <div class="col-md-12">
-                                <div class="subheading">
-                                    <h3>Hobbies</h3>
-                                </div>
-                                <div class="owl-carousel owl-theme">
+                        <!-- <div class="row testimonials mb-50"> -->
+                            <!-- <div class="col-md-12"> -->
+                                <!-- <div class="subheading"> -->
+                                    <!-- <h3>Hobbies</h3> -->
+                                <!-- </div> -->
+                                <!-- <div class="owl-carousel owl-theme"> -->
 
                                     <!--Testimonail Item-->
                                     <!-- <div class="testimonial-item">
@@ -412,8 +412,8 @@
                                         </div>
                                     </div> -->
                                 
-                                </div>
-                            </div>
+                                <!-- </div> -->
+                            <!-- </div> -->
                             <!--Testimonials Row End-->
 
                         </div>
@@ -444,14 +444,14 @@
                                     <li>
                                         <span class="line-left"></span>
                                         <div class="content">
-                                            <h4>Lead UI Designer</h4>
-                                            <h5>Big Design Company, NY, USA</h5>
+                                            <h4>Soporte de TI</h4>
+                                            <h5>DeibyCorp, Santa Cruz, Bolivia</h5>
                                             <p class="info">
-                                                Sit cupiditate praesentium ex esse nulla Facere fuga perspiciatis eveniet provident neque Ea ratione non minus temporibus ipsum Sunt minima
+                                                Mantenimiento y reparción de hardware o software de equipos informáticos en general.
                                             </p>
                                         </div>
                                         <span class="year">
-                                            <span class="to">2018</span>
+                                            <span class="to">Presente</span>
                                             <span class="from">2016</span>
                                         </span>
                                     </li>
@@ -460,14 +460,30 @@
                                     <li>
                                         <span class="line-left"></span>
                                         <div class="content">
-                                            <h4>Web Designer</h4>
-                                            <h5>Design Company, London, UK</h5>
+                                            <h4>Mantenimiento y Reparación de Computadoras</h4>
+                                            <h5>Comtelesis, Santa Cruz, Bolivia</h5>
                                             <p class="info">
-                                                Dolor id atque accusantium ut impedit odit provident soluta voluptatem Veritatis ipsam neque mollitia vero suscipit a laborum doloremque. Ipsa!
+                                                Servicios de mantenimiento a cualquier tipo de hardware de computadora como terminales  y servidores.
                                             </p>
                                         </div>
                                         <span class="year">
-                                            <span class="to">2016</span>
+                                            <span class="to">2014</span>
+                                            <span class="from">2013</span>
+                                        </span>
+                                    </li>
+
+                                    <!--Experience Item-->
+                                    <li>
+                                        <span class="line-left"></span>
+                                        <div class="content">
+                                            <h4>Desarrollador WEB</h4>
+                                            <h5>Freelance, Santa Cruz, Bolivia</h5>
+                                            <p class="info">
+                                                Desarrollo y despliegue de páginas web o sistemas a medida según la necesidad del cliente.
+                                            </p>
+                                        </div>
+                                        <span class="year">
+                                            <span class="to">Presente</span>
                                             <span class="from">2015</span>
                                         </span>
                                     </li>
@@ -476,15 +492,16 @@
                                     <li>
                                         <span class="line-left"></span>
                                         <div class="content">
-                                            <h4>Web Developer</h4>
-                                            <h5>Exis Development, London, UK</h5>
+                                            <h4>Operador en Computadoras</h4>
+                                            <h5>Compunet, Santa Cruz, Bolivia</h5>
                                             <p class="info">
-                                                Consectetur pariatur fugiat ipsam aperiam maiores. Nisi in dignissimos debitis expedita asperiores delectus vitae corporis.
+                                                Control y gestión de las computadoras y cabinas
+                                                telefónicas además de brindar una atención impecable a los clientes.
                                             </p>
                                         </div>
                                         <span class="year">
-                                            <span class="to">2015</span>
-                                            <span class="from">2014</span>
+                                            <span class="to">2008</span>
+                                            <span class="from">2005</span>
                                         </span>
                                     </li>
 
@@ -504,15 +521,15 @@
                                     <li>
                                         <span class="line-left"></span>
                                         <div class="content">
-                                            <h4>MA Graphics</h4>
-                                            <h5>Royal College of Art, London, UK</h5>
+                                            <h4>Universidad Autónoma Gabriel René Moreno</h4>
+                                            <h5>Ingeniería en Sistemas, Santa Cruz, Bolivia</h5>
                                             <p class="info">
-                                                Consectetur mollitia amet inventore nisi sed. Provident veritatis exercitationem eum doloremque itaque expedita? Ex voluptatem nostrum numquam illum.
+                                                Bases de datos, sistemas de información, documentación,metodologías ágiles, desarrollo en diferentes tecnologías.
                                             </p>
                                         </div>
                                         <span class="year">
                                             <span class="to">2014</span>
-                                            <span class="from">2013</span>
+                                            <span class="from">2022</span>
                                         </span>
                                     </li>
 
@@ -520,15 +537,15 @@
                                     <li>
                                         <span class="line-left"></span>
                                         <div class="content">
-                                            <h4>BA(HONS) Graphics</h4>
-                                            <h5>Central Saint Martins, London, UK</h5>
+                                            <h4>Instalador de Redes y Servidores</h4>
+                                            <h5>Fundación INFOCAL, Santa Cruz, Bolivia</h5>
                                             <p class="info">
-                                                Elit voluptatibus quas necessitatibus ullam tenetur provident voluptatibus. Ratione delectus lorem minus ipsa architecto. Saepe officiis sint adipisci.
+                                                Instalación, configuración de servidores basados en windows y linux. Cableado Estructurado, topologías de redes , etc.
                                             </p>
                                         </div>
                                         <span class="year">
-                                            <span class="to">2013</span>
-                                            <span class="from">2012</span>
+                                            <span class="to">2010</span>
+                                            <span class="from">2009</span>
                                         </span>
                                     </li>
 
@@ -536,15 +553,15 @@
                                     <li>
                                         <span class="line-left"></span>
                                         <div class="content">
-                                            <h4>Web & Graphics Diploma</h4>
-                                            <h5>Tech Arts Institute, CA, USA</h5>
+                                            <h4>Mantenimiento y Reparación de Computadoras</h4>
+                                            <h5>Fundación INFOCAL, Santa Cruz, Bolivia</h5>
                                             <p class="info">
-                                            Ipsum ex exercitationem est aliquid eos saepe. Dolorum aperiam cupiditate labore vero deleniti Aut unde deserunt neque voluptas.
+                                            Reparación de monitores, ordenadores, fuentes, impresoras, etc. Mantenimiento a cualquier periférico de computadora. Reinstalación de cualquier sistema operativo.
                                             </p>
                                         </div>
                                         <span class="year">
-                                            <span class="to">2012</span>
-                                            <span class="from">2011</span>
+                                            <span class="to">2011</span>
+                                            <span class="from">2010</span>
                                         </span>
                                     </li>
 
@@ -626,6 +643,16 @@
                                 <!--Coding Skill Item-->
                                 <div class="skill-item">
                                     <h4 class="progress-title">Javascript</h4>
+                                    <div class="progress">
+                                        <div class="progress-bar" data-progress-value="92">
+                                            <div class="progress-value">92%</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                 <!--Coding Skill Item-->
+                                 <div class="skill-item">
+                                    <h4 class="progress-title">PHP</h4>
                                     <div class="progress">
                                         <div class="progress-bar" data-progress-value="92">
                                             <div class="progress-value">92%</div>
