reparacion del index

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                         <li><span class="title">Nombre</span><span class="value">Deiby Torrez</span></li>
                                         <li><span class="title">Edad</span><span class="value">+30 Años</span></li>
                                         <li><span class="title">Dirección</span><span class="value">Santa Cruz, BOLIVIA</span></li>
-                                        <li><span class="title">Email</span><span class="value">deibytorrez@gmail.com</span></li>
+                                        <li><span class="title">Email</span><span class="value">deibytorrez14@gmail.com</span></li>
                                         <li><span class="title">Teléfono</span><span class="value">(+591) 798 65633</span></li>
                                         <li><span class="title">Freelance</span><span class="value">Disponible</span></li>
                                     </ul>
@@ -363,9 +363,9 @@
                         <!--Clients Row End-->
 
                         <!--Testimonials Row Start-->
-                        <!-- <div class="row testimonials mb-50"> -->
-                            <!-- <div class="col-md-12"> -->
-                                <!-- <div class="subheading"> -->
+                        <div class="row testimonials mb-50">
+                            <div class="col-md-12">
+                                <div class="subheading">
                                     <!-- <h3>Hobbies</h3> -->
                                 <!-- </div> -->
                                 <!-- <div class="owl-carousel owl-theme"> -->
@@ -412,8 +412,8 @@
                                         </div>
                                     </div> -->
                                 
-                                <!-- </div> -->
-                            <!-- </div> -->
+                                </div>
+                            </div>
                             <!--Testimonials Row End-->
 
                         </div>
@@ -451,7 +451,7 @@
                                             </p>
                                         </div>
                                         <span class="year">
-                                            <span class="to">Presente</span>
+                                            <span class="to">2022</span>
                                             <span class="from">2016</span>
                                         </span>
                                     </li>
@@ -483,7 +483,7 @@
                                             </p>
                                         </div>
                                         <span class="year">
-                                            <span class="to">Presente</span>
+                                            <span class="to">2022</span>
                                             <span class="from">2015</span>
                                         </span>
                                     </li>
@@ -524,7 +524,7 @@
                                             <h4>Universidad Autónoma Gabriel René Moreno</h4>
                                             <h5>Ingeniería en Sistemas, Santa Cruz, Bolivia</h5>
                                             <p class="info">
-                                                Bases de datos, sistemas de información, documentación,metodologías ágiles, desarrollo en diferentes tecnologías.
+                                                Bases de datos, sistemas de información, documentación, metodologías ágiles, desarrollo en diferentes tecnologías.
                                             </p>
                                         </div>
                                         <span class="year">
