actualizando las mejoras

--- a/index.html
+++ b/index.html
@@ -460,22 +460,6 @@
                                     <li>
                                         <span class="line-left"></span>
                                         <div class="content">
-                                            <h4>Mantenimiento y Reparación de Computadoras</h4>
-                                            <h5>Comtelesis, Santa Cruz, Bolivia</h5>
-                                            <p class="info">
-                                                Servicios de mantenimiento a cualquier tipo de hardware de computadora como terminales  y servidores.
-                                            </p>
-                                        </div>
-                                        <span class="year">
-                                            <span class="to">2014</span>
-                                            <span class="from">2013</span>
-                                        </span>
-                                    </li>
-
-                                    <!--Experience Item-->
-                                    <li>
-                                        <span class="line-left"></span>
-                                        <div class="content">
                                             <h4>Desarrollador WEB</h4>
                                             <h5>Freelance, Santa Cruz, Bolivia</h5>
                                             <p class="info">
@@ -485,6 +469,22 @@
                                         <span class="year">
                                             <span class="to">2022</span>
                                             <span class="from">2015</span>
+                                        </span>
+                                    </li>
+
+                                    <!--Experience Item-->
+                                    <li>
+                                        <span class="line-left"></span>
+                                        <div class="content">
+                                            <h4>Mantenimiento y Reparación de Computadoras</h4>
+                                            <h5>Comtelesis, Santa Cruz, Bolivia</h5>
+                                            <p class="info">
+                                                Servicios de mantenimiento a cualquier tipo de hardware de computadora como terminales  y servidores.
+                                            </p>
+                                        </div>
+                                        <span class="year">
+                                            <span class="to">2014</span>
+                                            <span class="from">2013</span>
                                         </span>
                                     </li>
 
@@ -579,7 +579,7 @@
                             <!--Design Skills Column Start-->
                             <div class="col-lg-6 skills">
                                 <div class="subheading">
-                                    <h3>Habilidades en Diseño</h3>
+                                    <h3>Habilidades en Diseño y Video</h3>
                                 </div>
 
                                 <!--Design Skill Item-->
@@ -605,6 +605,26 @@
                                 <!--Design Skill Item-->
                                 <div class="skill-item">
                                     <h4 class="progress-title">Illustrator</h4>
+                                    <div class="progress">
+                                        <div class="progress-bar" data-progress-value="94">
+                                            <div class="progress-value">94%</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                 <!--Design Skill Item-->
+                                <div class="skill-item">
+                                    <h4 class="progress-title">Wondershare Filmora</h4>
+                                    <div class="progress">
+                                        <div class="progress-bar" data-progress-value="94">
+                                            <div class="progress-value">94%</div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--Design Skill Item-->
+                                <div class="skill-item">
+                                    <h4 class="progress-title">Cycle8 Film</h4>
                                     <div class="progress">
                                         <div class="progress-bar" data-progress-value="94">
                                             <div class="progress-value">94%</div>
