--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <li><a href="#about" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-user"></i></span>Acerca de Mi</a></li>
                                 <li><a href="#resume" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-license"></i></span>Curriculum</a></li>
                                 <li><a href="#portfolio" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-briefcase"></i></span>Portfolio</a></li>
-                                <li><a href="#blog" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-book"></i></span>Blog</a></li>
+                                <!-- <li><a href="#blog" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-book"></i></span>Blog</a></li> -->
                                 <li><a href="#contact" class="pt-link"><span class="nav-menu-icon"><i class="lnr lnr-envelope"></i></span>Contactamé</a></li>
                             </ul>
                         </nav>
@@ -152,7 +152,7 @@
 
                         <!--Animated Text-->
                         <p class="cd-headline clip is-full-width">
-                        <span>Yo soy </span>
+                        <span>Servicios como: </span>
                         <span class="cd-words-wrapper">
                             <b class="is-visible">Desarrollador Web</b>
                             <b>Diseñador Gráfico</b>
@@ -206,7 +206,7 @@
                                         <li><span class="title">Freelance</span><span class="value">Disponible</span></li>
                                     </ul>
                                     <div class="resume-button mt-30">
-                                        <a class="btn-main" href="https://drive.google.com/file/d/1W8AFHZredLMDRJroTZdlMV2RN6hMdTHB/view?usp=sharing" target="_blank" rel="noopener noreferrer">Mira mi CV</a>
+                                        <a class="btn-main" href="https://drive.google.com/file/d/1YYMeptc7s9u4yFPjdxTqfOekK8Y7TROh/view?usp=sharing" target="_blank" rel="noopener noreferrer">Mira mi CV</a>
                                     </div>
                                 </div>
                             </div>
@@ -584,7 +584,7 @@
 
                                 <!--Design Skill Item-->
                                 <div class="skill-item">
-                                    <h4 class="progress-title">Coral Draw</h4>
+                                    <h4 class="progress-title">Corel Draw</h4>
                                     <div class="progress">
                                         <div class="progress-bar" data-progress-value="91">
                                             <div class="progress-value">91%</div>
@@ -865,7 +865,7 @@
 
 
                 <!--Blog Section Start-->
-                <section id="blog" class="blog-section pt-page">
+                <section id="blog" class="blog-section pt-page" hidden>
                     <div class="section-container">
 
                         <!--Page Heading-->
